--- a/app/assets/themes/waterfall/stylesheets/wine.css
+++ b/app/assets/themes/waterfall/stylesheets/wine.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-#wp_left {width:670px;float:left;background-color:#fff;box-shadow: 0 1px 3px rgba(34,25,25,0.4);margin: 0 30px 0 0;}
+#wp_left {width:670px;float:left;background-color:#fff;box-shadow: 0 1px 2px 1px #E0E0E0;border:1px solid #ccc;margin: 0 28px 0 0;}
 #wp_right {width:250px;float:left;}
 .wp_space_line {padding-left:30px;padding-right:30px;border-bottom:1px solid #ccc;}
 h1.wine_name_ch {font-size:20px;color:#000;margin:30px 0 3px 0;}
@@ -7,7 +7,16 @@ h1.wine_name_en {font-size:14px;color:#666;font-weight:normal;margin: 0 0 20px 0
 .wine_pic_main {margin:30px 0 20px 0;text-align:center;}
 .wine_pic_thumb ul li {float:left;}
 .wp_space_line h2 {font-size:16px;margin:0 0 20px 0;}
+.wp_follower, .wp_owner, .wp_event {zoom:1;}
+.wp_follower li {width:50px;float:left;margin: 0 2px 0 3px;}
+.wp_owner li, .wp_event li {width:280px;float:left;margin:0 20px 10px 0;_margin: 0 15px 10px 0;}
+.wp_owner .userpic, .wp_event .thumb {width:50px;float:left;margin-right:20px;}
+.wp_owner .info, .wp_event .info {width:210px;float:left;color:#999;}
+.wp_event .title a {color:#333;font-size:14px;font-weight:bold;}
+.wp_event .title a:hover {color:#993333;font-size:14px;text-decoration:none;}
+.wine_img {zoom:1px;}
 .wine_img li {float:left;width:100px;margin-right:1px;}
+#wp_left .comment_list {margin-bottom:0;}
 .wine_comment_list {margin: 0 0 20px 0;}
 .wine_comment_list li {margin: 0 0 20px 0;}
 .wine_comment_list .userpic, .comment_post .userpic {float:left;margin:0 20px 0 0;}
@@ -21,3 +30,16 @@ h1.wine_name_en {font-size:14px;color:#666;font-weight:normal;margin: 0 0 20px 0
 .wine_comment_post .post_main {float:left;}
 .wine_comment_post .reply_text {margin:0 0 10px 0;color:#999;}
 .wine_comment_post .reply_text span {margin-right:10px;}
+.wp_count {background-color:#fff;padding:10px 5px;text-align:center;zoom:1;margin-bottom:20px;}
+.wp_count a {display:inline-block;width:40px;float:left;margin: 0 4px;text-align:center;color:#333;}
+.wp_count a:hover {color:#993333;text-decoration:none;}
+.wine_id_pic, #wp_right .info, #wp_price, .pro_score {margin-bottom:20px;}
+#wp_right .score_star, #wp_right .wp_price {border-top:1px solid #333;padding: 20px 0;zoom:1;}
+#wp_right .score_star .star {width:80px;float:left;margin: 3px 10px 0 0;}
+#wp_right .score_star .iw_score {width:160px;float:left;color:#999;}
+.pro_score table th {background-color:#cc3333;color:#fff;font-weight:normal;padding:2px 0;}
+.pro_score table th.critic {border-right:2px solid #f3f3f3;}
+.pro_score table th.score {border-right:2px solid #f3f3f3;width:50px;}
+.pro_score table th.year {width:70px;}
+.pro_score table td.critic {text-align:left;}
+.pro_score table td {border-bottom:1px solid #ccc;padding:2px;font-size:11px;text-align:center;}
