--- a/app/views/themes/waterfall/wine_details/share/_events.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_events.html.erb
@@ -1,21 +1,27 @@
-<h3>
-  相关活动
-  <span class="font_12">
-    <%= link_to "（共6个)",  "/mine/cellars" %>
-  </span>
-</h3>
-
-<% (1..2).each do |i| %>
-  <div class="item">
-    <div class="pic">
-      <%= link_to (image_tag "v2/test/u_2.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
-    </div>
-    <div class="text">
-      <h4>北京勃艮第品酒会</h4>
-      <p>时间: 2012-1-14</p>
-      <p>地点: 上海徐汇区美罗城5楼超极电影院</p>
-      <p>14人关注</p>
-    </div>
-  </div>
-<% end %>
-
+		<div class="wp_space_line ptb30">
+			<div class="title_btn clearfix">
+				<a href="#" class="btn_gray float_r"><span>组织活动</span></a>
+				<h2>相关活动<span class="font12 more"><a href="wine_comment_list.html">（共2个...）</a></span></h2>
+			</div>
+			<ul class="wp_event">
+				<li>
+					<div class="thumb"><a href="#"><img src="images/test/event50_1.jpg" width="50" height="50" alt="username" /></a></div>
+					<div class="info">
+						<p class="title"><a href="#">北京勃艮第品酒会</a></p>
+						<p>时间: 2012-1-14<br />
+							地点: 上海徐汇区美罗城5楼超极电影院<br />
+							14人关注</p>
+						</div>
+					</li>
+					<li>
+						<div class="thumb"><a href="#"><img src="images/test/event50_2.jpg" width="50" height="50" alt="username" /></a></div>
+						<div class="info">
+							<p class="title"><a href="#">欧美红酒品鉴活动</a></p>
+							<p>时间: 2012-3-21<br />
+								地点: 北京国贸建外SOHO3号楼2504<br />
+								5人关注</p>
+							</div>
+						</li>
+						<div class="clear"></div>
+					</ul>
+				</div>
