--- a/app/views/themes/waterfall/wine_details/share/_likers.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_likers.html.erb
@@ -1,9 +1,15 @@
-<h3>
-  喜欢这支酒的人还喜欢
-</h3>
-<div class="items">
-  <% (1..6).each do |i| %>
-    <%= link_to image_tag("v2/test/m_w_3.png"), "/" %>
-  <% end %>
-</div>
+<div class="wp_space_line ptb30">
 
+<div class="title_btn">
+	<h2>喜欢这支酒的人还喜欢...</h2>
+</div>
+<ul class="wine_img">
+	<li><a href="#"><img src="images/test/wine100_01.jpg" width="100" height="100" alt="wine name" /></a></li>
+	<li><a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a></li>
+	<li><a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a></li>
+	<li><a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a></li>
+	<li><a href="#"><img src="images/test/wine100_05.jpg" width="100" height="100" alt="wine name" /></a></li>
+	<li><a href="#"><img src="images/test/wine100_06.jpg" width="100" height="100" alt="wine name" /></a></li>
+	<div class="clear"></div>
+</ul>
+</div>
