--- a/app/views/themes/waterfall/wine_details/share/_photos.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_photos.html.erb
@@ -1,12 +1,20 @@
-<h3>
-  所有图片
-  <span class="font_12">
-    <%= link_to "(共#{@wine_detail.photos_count}张, 更多)", wine_photos_path(@wine_detail.id) %>
-  </span>
-</h3>
-
-<div class="items">
-  <% @wine_detail.photos.each do |photo| %>
-    <%= link_to image_tag(photo.image_url(:w_thumb), :width => 90, :height => 90), wine_photo_path(photo.id) %>
-  <% end %>
+<div class="title_btn">
+	<a href="#" class="btn_gray float_r"><span>添加照片</span></a>
+	<h2>
+		所有照片
+		<span class="font12 more">
+			<%= link_to "(共#{@wine_detail.photos_count}张...)", wine_photos_path(@wine_detail.id) %>
+		</span>
+	</h2>
+	<div class="clear"></div>
 </div>
+<ul class="wine_img">
+	<% unless @wine_detail.photos.blank? %>
+	<% @wine_detail.photos.each do |photo| %>
+    <li><%= link_to image_tag(photo.image_url(:w_thumb_x), :width => 100, :height => 100), wine_photo_path(photo.id) %></li>
+  <% end %>
+  <% else %>
+	 <li>暂时没有图片.</li>
+  <% end %>
+	<div class="clear"></div>
+</ul>
