wine pages update

--- a/public/template/wine_profile.html
+++ b/public/template/wine_profile.html
@@ -29,7 +29,7 @@
             </div>
             <div class="clear"></div>
         </div>
-    </div>
+</div>
     <div id="wrapper950">
         <div id="wp_left">
        	  <div class="wp_space_line">
@@ -75,12 +75,12 @@
             </div>
           <div class="wp_space_line ptb30">
             <div class="title_btn">
-                    <a href="#" class="btn_gray float_r"><span>添加照片</span></a>
-                    <h2>所有照片<span class="font12 more"><a href="wine_photo_all.html">（共12张...）</a></span></h2>
+                    <a href="wine_photo_upload.html" class="btn_gray float_r"><span>添加照片</span></a>
+        <h2>所有照片<span class="font12 more"><a href="wine_photo_list.html">（共12张...）</a></span></h2>
                     <div class="clear"></div>
             </div>
               <ul class="wine_img">
-               	<li><a href="#"><img src="images/test/wine100_01.jpg" width="100" height="100" alt="wine name" /></a></li>
+               	<li><a href="wine_photo_detail.html"><img src="images/test/wine100_01.jpg" width="100" height="100" alt="wine name" /></a></li>
                 <li><a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a></li>
                 <li><a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a></li>
                 <li><a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a></li>
@@ -94,7 +94,7 @@
                     <h2>喜欢这支酒的人还喜欢...</h2>
                 </div>
                 <ul class="wine_img">
-                    <li><a href="#"><img src="images/test/wine100_01.jpg" width="100" height="100" alt="wine name" /></a></li>
+                    <li><a href="wine_profile.html"><img src="images/test/wine100_01.jpg" width="100" height="100" alt="wine name" /></a></li>
                     <li><a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a></li>
                     <li><a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a></li>
                     <li><a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a></li>
@@ -105,15 +105,15 @@
             </div>
             <div class="wp_space_line ptb30">
                 <div class="title_btn">
-                    <a href="#" class="btn_gray float_r"><span>添加评论</span></a>
-                    <h2>评论<span class="font12 more"><a href="wine_comment_list.html">（共24条...）</a></span></h2>
+                    <a href="wine_comment_list#01.html" class="btn_gray float_r"><span>添加评论</span></a>
+                  <h2>评论<span class="font12 more"><a href="wine_comment_list.html">（共24条...）</a></span></h2>
                     <div class="clear"></div>
                 </div>
                 <ul class="comment_list clearfix">
                 	<li>
                     	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
                         <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class=" star_s3_h"></span></div>
                             <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
                             <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(3)</a></div>
                                 <div class="replybox">
@@ -153,7 +153,7 @@
                    <li>
                     	<div class="userpic"><a href="#"><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></a></div>
                         <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><!--<span class="control"><a href="#">回复</a> | <a href="#">删除</a></span>--></div>
+                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="star_s5"></span></div>
                             <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈；</div>
                             <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(1)</a></div>
                         </div>
@@ -162,7 +162,7 @@
                     <li>
                     	<div class="userpic"><a href="#"><img src="images/userimage/06.jpg" width="50" height="50" alt="username" /></a></div>
                         <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="star_s3_h"></span></div>
                             <div class="content">
                             <!--<p class="reply">好诱人的咖喱啊，我也好想吃！</p>-->
                           我比较喜欢意大利的酒，这款朋友送过，价格不贵，外包装看起来也挺高档的.</div>
@@ -175,10 +175,10 @@
             </div>
             <div class="wp_space_line ptb30">
             	<div class="title_btn">
-            		<h2>他们关注<span class="font12 more"><a href="wine_comment_list.html">（共31人...）</a></span></h2>
+            		<h2>他们关注<span class="font12 more"><a href="wine_follower_list.html">（共31人...）</a></span></h2>
                </div>
                <ul class="wp_follower">
-               	  <li><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></li>
+               	  <li><a href="myiwine.html"><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></a></li>
                   <li><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></li>
                   <li><img src="images/userimage/01.jpg" width="50" height="50" alt="username" /></li>
                   <li><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></li>
@@ -202,13 +202,15 @@
                     <div class="info">
                     	<p class="username"><a href="#">菠菜</a></p>
                         <p>2支 | <span class="price">￥240.00</span>/支</p>
+                        <a href="cellar_people.html" class="icon_cellar" title="去他的酒窖">去他的酒窖</a>
                     </div>
                 </li>
                 <li>
                 	<div class="userpic"><a href="#"><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></a></div>
                     <div class="info">
                     	<p class="username"><a href="#">猪猪</a></p>
-                      <p>2支 | <span class="price">￥240.00</span>/支</p>
+                          <p>2支 | <span class="price">￥240.00</span>/支</p>
+                          <a href="cellar_people.html" class="icon_cellar" title="去他的酒窖">去他的酒窖</a>
                     </div>
                 </li>
                 <li>
@@ -216,6 +218,7 @@
                     <div class="info">
                     	<p class="username"><a href="#">Melody</a></p>
                         <p>2支 | <span class="price">￥240.00</span>/支</p>
+                        <a href="cellar_people.html" class="icon_cellar" title="去他的酒窖">去他的酒窖</a>
                     </div>
                 </li>
                 <li>
@@ -223,6 +226,7 @@
                     <div class="info">
                     	<p class="username"><a href="#">不良夏生</a></p>
                         <p>2支 | <span class="price">￥240.00</span>/支</p>
+                        <a href="cellar_people.html" class="icon_cellar" title="去他的酒窖">去他的酒窖</a>
                     </div>
                 </li>
                 <div class="clear"></div>
@@ -231,7 +235,7 @@
             <div class="wp_space_line ptb30">
             	<div class="title_btn clearfix">
             		<a href="#" class="btn_gray float_r"><span>组织活动</span></a>
-                    <h2>相关活动<span class="font12 more"><a href="wine_comment_list.html">（共2个...）</a></span></h2>
+                    <h2>相关活动<span class="font12 more"><a href="wine_event_list.html">（共2个...）</a></span></h2>
                </div>
                <ul class="wp_event">
                	<li>
@@ -258,7 +262,7 @@
       </div>
         <div id="wp_right">
       <div class="wp_count clearfix">
-            	<a href="#">1234<br/>关注</a><a href="#">1234<br/>拥有</a><a href="#">1234<br/>评论</a><a href="#">1234<br/>品酒辞</a><a href="#">1234<br/>照片</a>
+            	<a href="wine_follower_list.html">1234<br/>关注</a><a href="wine_owner_list.html">1234<br/>拥有</a><a href="wine_comment_list.html">1234<br/>评论</a><a href="wine_testnotes_list.html">1234<br/>品酒辞</a><a href="wine_photo_list.html">1234<br/>照片</a>
                   <div class="clear"></div>
           </div>
             <div class="wine_id_pic"><img src="images/test/wine_id_pic.jpg" width="100" height="100" alt="winename" /></div>
