--- a/app/views/themes/waterfall/searches/results.html.erb
+++ b/app/views/themes/waterfall/searches/results.html.erb
@@ -1,5 +1,5 @@
 <% content_for :css do %>
-<%= theme_stylesheet_link_tag :search %>
+  <%= theme_stylesheet_link_tag :search %>
 <% end %>
 <div class="whitespace normal search">
   <div class="left">
@@ -20,9 +20,7 @@
     <div class="winery_result">
       <ul>
         <li>
-          <a href="#">
-            <img src="images/test/winery70.jpg" width="70" height="70" alt="winery name" />
-          </a>
+          <a href="#"><img src="images/test/winery70.jpg" width="70" height="70" alt="winery name" /></a>
           <div class="meta">
             <h1 class="zh"><a href="#">某某酒庄</a></h1>
             <h1 class="en"><a href="#">THE MOREFM WINERY</a></h1>
