--- a/app/views/themes/waterfall/wine_details/share/_score.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_score.html.erb
@@ -4,3 +4,8 @@
 
 <span class="font_16 red"> 8.5 </span>分, 32人评价
 
+			<div class="score_star">
+					<span class="star star_b_s45"></span>
+					<span class="iw_score"><span class="redscore">8.5</span> 分，32人评价</span>
+					<div class="clear"></div>
+				</div>
